# cga-node

./: .gitignore  .gitlab-ci.yml  .travis.yml  CGA.icns  CGA.rc  CMakeLists.txt  Info.plist.in  README.md  appveyor.yml  cgacoin-beta.spec.in  cgacoin.spec.in  doxygen.config  방화벽.txt
cga/cga_node/: CMakeLists.txt  daemon.cpp
cga/cga_node_beta/: CMakeLists.txt  daemon.cpp  daemon.hpp  entry.cpp
cga/cga_wallet/: entry.cpp  entry_com.cpp
cga/cga_wallet_beta/: entry.cpp  icon.hpp
cga/lib/: CMakeLists.txt  blockbuilders.cpp  blockbuilders.hpp  blocks.cpp  blocks.hpp  config.hpp  errors.cpp  errors.hpp  interface.cpp  interface.h  jsonconfig.hpp  numbers.cpp  numbers.hpp  timer.hpp  utility.cpp  utility.hpp  work.cpp  work.hpp
cga/node/: CMakeLists.txt  blockprocessor.cpp  blockprocessor.hpp  bootstrap.cpp  bootstrap.hpp  cli.cpp  cli.hpp  common.cpp  common.hpp  ipc.cpp  ipc.hpp  lmdb.cpp  lmdb.hpp  logging.cpp  logging.hpp  node.cpp  node.hpp  nodeconfig.cpp  nodeconfig.hpp  openclwork.cpp  openclwork.hpp  peers.cpp  peers.hpp  portmapping.cpp  portmapping.hpp  rpc.cpp  rpc.hpp  rpc_secure.cpp  rpc_secure.hpp  signatures.cpp  signatures.hpp  stats.cpp  stats.hpp  testing.cpp  testing.hpp  voting.cpp  voting.hpp  wallet.cpp  wallet.hpp  working.hpp  (+1 more)
cga/qt/: qt.cpp  qt.hpp
cga/qt_system/: entry.cpp
cga/secure/: CMakeLists.txt  blockstore.cpp  blockstore.hpp  common.cpp  (+7 more)
ci/: build-centos.sh  build-gitlab.sh  build-travis.sh  clang-format-all.sh  deploy-docker.sh  record_rep_weights.py  test.sh
load-tester/: Cargo.toml
util/: changelog_generator  makesrc
(+46 files in other folders)
